--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/themes/_light.scss",
+              "src/assets/themes/_dark.scss"
             ],
             "scripts": []
           },
@@ -93,7 +95,9 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/themes/_light.scss",
+              "src/assets/themes/_dark.scss"
             ],
             "scripts": []
           }
