--- a/angular.json
+++ b/angular.json
@@ -33,9 +33,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss",
-              "src/assets/themes/_light.scss",
-              "src/assets/themes/_dark.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -95,9 +93,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss",
-              "src/assets/themes/_light.scss",
-              "src/assets/themes/_dark.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           }
